completed all MVP's and extensions with all tests passing